--- a/index.html
+++ b/index.html
@@ -221,9 +221,33 @@ Operations can be chained together with the pipe operator (`%&gt;%`)
 
 class: center middle
 
-.dramatic[
-To R!
-]
+## To R!
+
+---
+
+## Which command would sort your data by ascending height then descending weight?
+
+A) arrange(tidy_data, height &amp; desc(weight))
+
+B) arrange(tidy_data, height, desc(weight))
+
+C) arrange(tidy_data, height) %&gt;% arrange(desc(weight))
+
+D) arrange(tidy_data, c(height, desc(weight)))
+
+
+---
+
+## Which command would sort your data by ascending height then descending weight?
+
+A) arrange(tidy_data, height &amp; desc(weight))
+
+.accent-blue[B) arrange(tidy_data, height, desc(weight))]
+
+C) arrange(tidy_data, height) %&gt;% arrange(desc(weight))
+
+
+D) arrange(tidy_data, c(height, desc(weight)))
 
 
 
